github pages change

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <div class="container-lg px-3 my-5 markdown-body">
       
 
-      <h1 id="passkey-auth-go">passkey-auth-go</h1>
-<p>Simple app using go and react to illustrate passkey authentication
-This app uses go for webauthentication ceremonies and react as frontend.</p>
+      <h1 id="passkey-auth-go">passkey Authentication</h1>
+<p>Simple app using Golang and React.Js to illustrate passkey authentication</p>
 
 <h2 id="getting-started">Getting started</h2>
+<p> Clone the repository : <code class="language-plaintext highlighter-rouge">git clone git@github.com:sourcecode081017/passkey-auth-go.git</code></p>
+<p> Ensure <code>docker</code> is running and <code>docker-compose</code> is installed.</p>
 <p>To start the app, you can use the <code class="language-plaintext highlighter-rouge">make</code> command. Follow these steps:</p>
 
 <ol>
-  <li>Ensure you have <code class="language-plaintext highlighter-rouge">make</code> installed on your system.</li>
   <li>
     <p>Run the following command in the project directory:</p>
 
@@ -61,11 +61,11 @@ This app uses go for webauthentication ceremonies and react as frontend.</p>
 <p>This will build and start the application.</p>
 
 <h2 id="app-ui">APP UI</h2>
-<h3 id="app-login-page">App login page</h3>
-<p><img src="/passkey-auth-go/internal/client/src/assets/login-page.png" alt="alt text" /></p>
-<h3 id="app-dashboard">App dashboard</h3>
-<p><img src="/passkey-auth-go/dashboard.png" alt="alt text" /></p>
 
+<div class="video-container">
+  <h3>Watch the Demo</h3>
+  <iframe width="560" height="315" src="https://github.com/user-attachments/assets/ee113d26-b179-45e0-bc1f-f550db82bb7e" title="Passkey Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
