--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      
-
-      <h1 id="passkey-auth-go">passkey Authentication</h1>
+      <h1 id="passkey-auth-go">
+        <a href="https://github.com/sourcecode081017/passkey-auth-go">passkey Authentication Go Lang</a>
+      </h1>
 <p>Simple app using Golang and React.Js to illustrate passkey authentication</p>
 
 <h2 id="getting-started">Getting started</h2>
@@ -60,11 +60,10 @@
 
 <p>This will build and start the application.</p>
 
-<h2 id="app-ui">APP UI</h2>
+<h2 id="app-ui">APP Demo</h2>
 
 <div class="video-container">
-  <h3>Watch the Demo</h3>
-  <iframe width="560" height="315" src="https://github.com/user-attachments/assets/ee113d26-b179-45e0-bc1f-f550db82bb7e" title="Passkey Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://youtu.be/ZhlPCkCX7FI" title="Passkey Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
       
