github pages link update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <h2 id="app-ui">APP Demo</h2>
 
 <div class="video-container">
-  <iframe width="560" height="315" src="https://youtu.be/ZhlPCkCX7FI" title="Passkey Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://youtu.be/embed/ZhlPCkCX7FI" title="Passkey Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
       
